PA_Education/TestMenifest/force-app/main/default/objects/Certificate__c/Certificate__c.object-meta.xml
<CustomObject>
    <label>자격증</label>
    <nameField>
        <displayFormat>Certi-{0000}</displayFormat>
        <label>Certi No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>