PA_Education/TestMenifest/force-app/main/default/objects/Certificate__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>사원명</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>자격증</relationshipLabel>
    <relationshipName>Certificate</relationshipName>
    <type>Lookup</type>
</CustomField>