PA_Education/TestMenifest/force-app/main/default/objects/Certificate__c/fields/fm_Allowance__c.field-meta.xml
<CustomField>
    <fullName>fm_Allowance__c</fullName>
    <formula>TEXT(  QualificationId__r.Allowance__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>수당</label>
    <type>Text</type>
</CustomField>