PA_Education/TestMenifest/force-app/main/default/objects/Certificate__c/fields/fm_CertificatedDate__c.field-meta.xml
<CustomField>
    <fullName>fm_CertificatedDate__c</fullName>
    <formula>QualificationId__r.AcquisitionDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>취득일자</label>
    <type>Date</type>
</CustomField>