PA_Education/TestMenifest/force-app/main/default/objects/Certificate__c/fields/fm_CertificateName__c.field-meta.xml
<CustomField>
    <fullName>fm_CertificateName__c</fullName>
    <formula>TEXT(QualificationId__r.CertificationName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>자격증명</label>
    <type>Text</type>
</CustomField>