PA_Education/TestMenifest/force-app/main/default/objects/Certificate__c/fields/fm_ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>fm_ExpirationDate__c</fullName>
    <formula>QualificationId__r.ExpirationDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>만료일자</label>
    <type>Date</type>
</CustomField>