PA_Education/TestMenifest/force-app/main/default/objects/Certificate__c/fields/fm_IsExpired__c.field-meta.xml
<CustomField>
    <fullName>fm_IsExpired__c</fullName>
    <formula>IF(QualificationId__r.ExpirationDate__c &lt; Today(), &quot;만료됨&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>만료여부</label>
    <type>Text</type>
</CustomField>