PA_Education/TestMenifest/force-app/main/default/objects/Certificate__c/fields/fm_IsFiles__c.field-meta.xml
<CustomField>
    <fullName>fm_IsFiles__c</fullName>
    <formula>QualificationId__r.IsFiles__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>파일첨부</label>
    <type>Checkbox</type>
</CustomField>