PA_Education/TestMenifest/force-app/main/default/objects/Certificate__c/fields/fm_JoinDate__c.field-meta.xml
<CustomField>
    <fullName>fm_JoinDate__c</fullName>
    <formula>Employee__r.JoinDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>입사일자</label>
    <type>Date</type>
</CustomField>