PA_Education/TestMenifest/force-app/main/default/objects/Certificate__c/fields/fm_Level__c.field-meta.xml
<CustomField>
    <fullName>fm_Level__c</fullName>
    <formula>TEXT(QualificationId__r.Level__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>등급</label>
    <type>Text</type>
</CustomField>