PA_Education/TestMenifest/force-app/main/default/objects/Certificate__c/fields/PaymentEndDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentEndDate__c</fullName>
    <label>지급종료일</label>
    <type>Date</type>
</CustomField>