PA_Education/TestMenifest/force-app/main/default/objects/Certificate__c/fields/PaymentStartDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentStartDate__c</fullName>
    <label>지급시작일</label>
    <type>Date</type>
</CustomField>