PA_Education/TestMenifest/force-app/main/default/objects/Certificate__c/fields/QualificationId__c.field-meta.xml
<CustomField>
    <fullName>QualificationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>자격사항</label>
    <referenceTo>Qualification__c</referenceTo>
    <relationshipLabel>자격증</relationshipLabel>
    <relationshipName>Certificate</relationshipName>
    <type>Lookup</type>
</CustomField>