PA_Education/TestMenifest/force-app/main/default/objects/Certificate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>fm_IsExpired__c</columns>
    <columns>fm_IsPayment__c</columns>
    <columns>fm_IsFiles__c</columns>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>fm_Position__c</columns>
    <columns>fm_CertificateName__c</columns>
    <columns>QualificationId__c</columns>
    <columns>fm_CertificatedDate__c</columns>
    <columns>PaymentStartDate__c</columns>
    <columns>PaymentEndDate__c</columns>
    <columns>fm_ExpirationDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>